Updated unit tests

--- a/tests/render-test/footnote/result.html
+++ b/tests/render-test/footnote/result.html
@@ -9,10 +9,10 @@ section.docx>footer { z-index: 1; }
 .docx table td, .docx table th { vertical-align: top; }
 .docx p { margin: 0pt; min-height: 1em; }
 .docx span { white-space: pre-wrap; overflow-wrap: break-word; }
-.docx a { color: inherit; text-decoration: inherit; } 
+.docx a { color: inherit; text-decoration: inherit; }
 .docx svg { fill: transparent; }
 </style><!--docxjs document styles--><style>.docx span {
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
 }
 .docx p {
 }
@@ -20,7 +20,7 @@ p.docx_normal {
   text-align: left;
 }
 p.docx_normal span {
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
   min-height: 12.00pt;
   font-size: 12.00pt;
@@ -39,7 +39,7 @@ p.docx_style18 {
   text-align: left;
 }
 p.docx_style18 span {
-  font-family: Liberation Sans;
+  font-family: 'Liberation Sans', 'Microsoft YaHei';
   min-height: 14.00pt;
   font-size: 14.00pt;
   color: black;
@@ -51,7 +51,7 @@ p.docx_style19 {
   text-align: left;
 }
 p.docx_style19 span {
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
   min-height: 12.00pt;
   font-size: 12.00pt;
@@ -63,7 +63,7 @@ p.docx_style20 {
   text-align: left;
 }
 p.docx_style20 span {
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
   min-height: 12.00pt;
   font-size: 12.00pt;
@@ -77,14 +77,14 @@ p.docx_style21 span {
   font-style: italic;
   min-height: 12.00pt;
   font-size: 12.00pt;
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
 }
 p.docx_style22 {
   text-align: left;
 }
 p.docx_style22 span {
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
   min-height: 12.00pt;
   font-size: 12.00pt;
@@ -98,7 +98,7 @@ p.docx_style23 {
 p.docx_style23 span {
   min-height: 6.00pt;
   font-size: 6.00pt;
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
 }
 p.docx_style24 {
@@ -109,7 +109,7 @@ p.docx_style24 {
 p.docx_style24 span {
   min-height: 10.00pt;
   font-size: 10.00pt;
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
 }
 </style><div class="docx-wrapper"><section class="docx" style="padding: 56.7pt; width: 595.3pt; min-height: 841.9pt;"><article><p class="docx_normal"><span class="docx_style15"><sup>1</sup></span><span lang="en-US">content</span><span></span></p></article><ol><li><p class="docx_style24"><span class="docx_style14"></span><span lang="en-US"><span> </span>footnote</span></p></li></ol></section><section class="docx" style="padding: 56.7pt; width: 595.3pt; min-height: 841.9pt;"><article><p class="docx_normal"><span lang="en-US">content2</span><span class="docx_style15" lang="en-US"><sup>1</sup></span></p></article><ol><li><p class="docx_style24"><span class="docx_style14"></span><span lang="en-US"><span> </span>footnote2</span></p></li></ol></section></div>
