--- a/tests/render-test/numbering/result.html
+++ b/tests/render-test/numbering/result.html
@@ -9,10 +9,10 @@ section.docx>footer { z-index: 1; }
 .docx table td, .docx table th { vertical-align: top; }
 .docx p { margin: 0pt; min-height: 1em; }
 .docx span { white-space: pre-wrap; overflow-wrap: break-word; }
-.docx a { color: inherit; text-decoration: inherit; } 
+.docx a { color: inherit; text-decoration: inherit; }
 .docx svg { fill: transparent; }
 </style><!--docxjs document styles--><style>.docx span {
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
 }
 .docx p {
 }
@@ -20,7 +20,7 @@ p.docx_normal {
   text-align: left;
 }
 p.docx_normal span {
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
   min-height: 12.00pt;
   font-size: 12.00pt;
@@ -180,7 +180,7 @@ p.docx_style16 {
   text-align: left;
 }
 p.docx_style16 span {
-  font-family: Liberation Sans;
+  font-family: 'Liberation Sans', 'Microsoft YaHei';
   min-height: 14.00pt;
   font-size: 14.00pt;
   color: black;
@@ -192,7 +192,7 @@ p.docx_style17 {
   text-align: left;
 }
 p.docx_style17 span {
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
   min-height: 12.00pt;
   font-size: 12.00pt;
@@ -204,7 +204,7 @@ p.docx_style18 {
   text-align: left;
 }
 p.docx_style18 span {
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
   min-height: 12.00pt;
   font-size: 12.00pt;
@@ -218,14 +218,14 @@ p.docx_style19 span {
   font-style: italic;
   min-height: 12.00pt;
   font-size: 12.00pt;
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
 }
 p.docx_style20 {
   text-align: left;
 }
 p.docx_style20 span {
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
   min-height: 12.00pt;
   font-size: 12.00pt;
@@ -236,7 +236,7 @@ p.docx_style21 {
   text-align: left;
 }
 p.docx_style21 span {
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
   min-height: 12.00pt;
   font-size: 12.00pt;
