--- a/tests/render-test/table-spans/result.html
+++ b/tests/render-test/table-spans/result.html
@@ -9,10 +9,10 @@ section.docx>footer { z-index: 1; }
 .docx table td, .docx table th { vertical-align: top; }
 .docx p { margin: 0pt; min-height: 1em; }
 .docx span { white-space: pre-wrap; overflow-wrap: break-word; }
-.docx a { color: inherit; text-decoration: inherit; } 
+.docx a { color: inherit; text-decoration: inherit; }
 .docx svg { fill: transparent; }
 </style><!--docxjs document styles--><style>.docx span {
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   min-height: 12.00pt;
   font-size: 12.00pt;
 }
@@ -25,7 +25,7 @@ p.docx_normal {
   text-align: left;
 }
 p.docx_normal span {
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
   min-height: 12.00pt;
   font-size: 12.00pt;
@@ -36,7 +36,7 @@ p.docx_style14 {
   text-align: left;
 }
 p.docx_style14 span {
-  font-family: Liberation Sans;
+  font-family: 'Liberation Sans', 'Microsoft YaHei';
   min-height: 14.00pt;
   font-size: 14.00pt;
   color: black;
@@ -48,7 +48,7 @@ p.docx_style15 {
   text-align: left;
 }
 p.docx_style15 span {
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
   min-height: 12.00pt;
   font-size: 12.00pt;
@@ -60,7 +60,7 @@ p.docx_style16 {
   text-align: left;
 }
 p.docx_style16 span {
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
   min-height: 12.00pt;
   font-size: 12.00pt;
@@ -74,7 +74,7 @@ p.docx_style17 span {
   font-style: italic;
   min-height: 12.00pt;
   font-size: 12.00pt;
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
 }
 p.docx_style18 {
@@ -83,7 +83,7 @@ p.docx_style18 {
   text-align: left;
 }
 p.docx_style18 span {
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
   min-height: 12.00pt;
   font-size: 12.00pt;
@@ -94,7 +94,7 @@ p.docx_style19 {
   text-align: left;
 }
 p.docx_style19 span {
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
   min-height: 12.00pt;
   font-size: 12.00pt;
@@ -106,7 +106,7 @@ p.docx_style20 {
 }
 p.docx_style20 span {
   font-weight: bold;
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
   min-height: 12.00pt;
   font-size: 12.00pt;
