--- a/tests/render-test/text-break/result.html
+++ b/tests/render-test/text-break/result.html
@@ -9,10 +9,10 @@ section.docx>footer { z-index: 1; }
 .docx table td, .docx table th { vertical-align: top; }
 .docx p { margin: 0pt; min-height: 1em; }
 .docx span { white-space: pre-wrap; overflow-wrap: break-word; }
-.docx a { color: inherit; text-decoration: inherit; } 
+.docx a { color: inherit; text-decoration: inherit; }
 .docx svg { fill: transparent; }
 </style><!--docxjs document styles--><style>.docx span {
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   min-height: 12.00pt;
   font-size: 12.00pt;
 }
@@ -21,7 +21,7 @@ section.docx>footer { z-index: 1; }
 p.docx_normal {
 }
 p.docx_normal span {
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
   min-height: 12.00pt;
   font-size: 12.00pt;
@@ -34,7 +34,7 @@ p.docx_style15 {
   margin-bottom: 6.00pt;
 }
 p.docx_style15 span {
-  font-family: Liberation Sans;
+  font-family: 'Liberation Sans', 'Microsoft YaHei';
   min-height: 14.00pt;
   font-size: 14.00pt;
   color: black;
@@ -45,7 +45,7 @@ p.docx_style16 {
   line-height: 1.15;
 }
 p.docx_style16 span {
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
   min-height: 12.00pt;
   font-size: 12.00pt;
@@ -56,7 +56,7 @@ p.docx_style17 {
   line-height: 1.15;
 }
 p.docx_style17 span {
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
   min-height: 12.00pt;
   font-size: 12.00pt;
@@ -69,13 +69,13 @@ p.docx_style18 span {
   font-style: italic;
   min-height: 12.00pt;
   font-size: 12.00pt;
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
 }
 p.docx_style19 {
 }
 p.docx_style19 span {
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
   min-height: 12.00pt;
   font-size: 12.00pt;
