--- a/tests/render-test/text/result.html
+++ b/tests/render-test/text/result.html
@@ -9,7 +9,7 @@ section.docx>footer { z-index: 1; }
 .docx table td, .docx table th { vertical-align: top; }
 .docx p { margin: 0pt; min-height: 1em; }
 .docx span { white-space: pre-wrap; overflow-wrap: break-word; }
-.docx a { color: inherit; text-decoration: inherit; } 
+.docx a { color: inherit; text-decoration: inherit; }
 .docx svg { fill: transparent; }
 </style><!--docxjs document theme values--><style>.docx {
   --docx-majorHAnsi-font: Calibri Light;
@@ -55,7 +55,7 @@ p.docx_style14 {
   text-align: left;
 }
 p.docx_style14 span {
-  font-family: Liberation Sans;
+  font-family: 'Liberation Sans', 'Microsoft YaHei';
   min-height: 14.00pt;
   font-size: 14.00pt;
   color: black;
