--- a/tests/render-test/revision/result.html
+++ b/tests/render-test/revision/result.html
@@ -9,10 +9,10 @@ section.docx>footer { z-index: 1; }
 .docx table td, .docx table th { vertical-align: top; }
 .docx p { margin: 0pt; min-height: 1em; }
 .docx span { white-space: pre-wrap; overflow-wrap: break-word; }
-.docx a { color: inherit; text-decoration: inherit; } 
+.docx a { color: inherit; text-decoration: inherit; }
 .docx svg { fill: transparent; }
 </style><!--docxjs document styles--><style>.docx span {
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   min-height: 12.00pt;
   font-size: 12.00pt;
 }
@@ -26,7 +26,7 @@ p.docx_normal {
   text-align: left;
 }
 p.docx_normal span {
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
   min-height: 12.00pt;
   font-size: 12.00pt;
@@ -44,7 +44,7 @@ p.docx_style17 {
   text-align: left;
 }
 p.docx_style17 span {
-  font-family: Liberation Sans;
+  font-family: 'Liberation Sans', 'Microsoft YaHei';
   min-height: 14.00pt;
   font-size: 14.00pt;
   color: black;
@@ -57,7 +57,7 @@ p.docx_style18 {
   text-align: left;
 }
 p.docx_style18 span {
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
   min-height: 12.00pt;
   font-size: 12.00pt;
@@ -70,7 +70,7 @@ p.docx_style19 {
   text-align: left;
 }
 p.docx_style19 span {
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
   min-height: 12.00pt;
   font-size: 12.00pt;
@@ -85,7 +85,7 @@ p.docx_style20 span {
   font-style: italic;
   min-height: 12.00pt;
   font-size: 12.00pt;
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
 }
 p.docx_style21 {
@@ -95,7 +95,7 @@ p.docx_style21 {
   text-align: left;
 }
 p.docx_style21 span {
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
   min-height: 12.00pt;
   font-size: 12.00pt;
@@ -111,7 +111,7 @@ p.docx_style22 {
 p.docx_style22 span {
   min-height: 10.00pt;
   font-size: 10.00pt;
-  font-family: Liberation Serif;
+  font-family: 'Liberation Serif', NSimSun;
   color: black;
 }
 </style><div class="docx-wrapper"><section class="docx" style="padding: 56.7pt; width: 595.3pt; min-height: 841.9pt;"><article><p class="docx_normal" style="text-align: left;"><span lang="en-US">Original text </span><span lang="en-US">insered</span><span lang="en-US"> </span></p></article></section></div>
