Fixed: border style Added: support of trPr.gridBefore/trPr.gridAfter Added: support of trPr.hidden

--- a/tests/render-test/footnote/result.html
+++ b/tests/render-test/footnote/result.html
@@ -90,7 +90,7 @@ p.docx_style22 span {
   font-size: 12.00pt;
 }
 p.docx_style23 {
-  border-bottom: 0.25pt solid #808080;
+  border-bottom: 0.25pt double #808080;
   margin-top: 0.00pt;
   margin-bottom: 14.15pt;
   text-align: left;
