added support of RTL

--- a/tests/render-test/footnote/result.html
+++ b/tests/render-test/footnote/result.html
@@ -103,7 +103,7 @@ p.docx_style23 span {
 }
 p.docx_style24 {
   text-indent: -16.95pt;
-  margin-left: 16.95pt;
+  margin-inline-start: 16.95pt;
   text-align: left;
 }
 p.docx_style24 span {
