--- a/tests/render-test/revision/result.html
+++ b/tests/render-test/revision/result.html
@@ -102,7 +102,7 @@ p.docx_style21 span {
 }
 p.docx_style22 {
   text-indent: -17.00pt;
-  margin-left: 17.00pt;
+  margin-inline-start: 17.00pt;
   hyphens: none;
   margin-top: 0.00pt;
   margin-bottom: 0.00pt;
